--- a/app.css
+++ b/app.css
@@ -117,3 +117,15 @@ footer {
   background-color: #f2f2f2;
   padding: 20px;
 }
+@media (max-width: 600px) {
+  .input1 {
+    width: 300px;
+  }
+  .panel {
+    flex-direction: column;
+    justify-content: center;
+    align-content: center;
+    display: flex;
+    align-items: center;
+  }
+}
